--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -201,6 +201,72 @@ dataSources:
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleShareTransfer
       file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: nativeSushiBadgerWbtcLpSett
+    network: mainnet
+    source:
+      address: '0x1862A18181346EBd9EdAf800804f89190DeF24a5'
+      abi: V1Contract
+      startBlock: 11539529
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - Vault
+        - Deposit
+        - Withdraw
+        - Harvest
+        - Transfer
+        - AccountVaultBalance
+        - Account
+        - Token
+      abis:
+        - name: V1Contract
+          file: ./abis/V1Contract.json
+        - name: Controller
+          file: ./abis/Controller.json
+        - name: Strategy
+          file: ./abis/Strategy.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleShareTransfer
+      file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: nativeSushiWbtcEthLpSett
+    network: mainnet
+    source:
+      address: '0x758a43ee2bff8230eeb784879cdcff4828f2544d'
+      abi: V1Contract
+      startBlock: 11537600
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - Vault
+        - Deposit
+        - Withdraw
+        - Harvest
+        - Transfer
+        - AccountVaultBalance
+        - Account
+        - Token
+      abis:
+        - name: V1Contract
+          file: ./abis/V1Contract.json
+        - name: Controller
+          file: ./abis/Controller.json
+        - name: Strategy
+          file: ./abis/Strategy.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleShareTransfer
+      file: ./src/mapping.ts
   # ===== Geysers =====
   - kind: ethereum/contract
     name: nativeBadgerGeyser
@@ -339,6 +405,58 @@ dataSources:
       address: '0xeD0B7f5d9F6286d00763b0FFCbA886D8f9d56d5e'
       abi: BadgerGeyser
       startBlock: 11376266
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - Geyser
+        - StakedEvent
+        - UnstakedEvent
+      abis:
+        - name: BadgerGeyser
+          file: ./abis/BadgerGeyser.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: Staked(indexed address,uint256,uint256,indexed uint256,indexed uint256,bytes)
+          handler: handleStaked
+        - event: Unstaked(indexed address,uint256,uint256,indexed uint256,indexed uint256,bytes)
+          handler: handleUnstaked
+      file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: nativeSushiBadgerWbtcLpGeyser
+    network: mainnet
+    source:
+      address: '0xB5b654efBA23596Ed49FAdE44F7e67E23D6712e7'
+      abi: BadgerGeyser
+      startBlock: 11539649
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - Geyser
+        - StakedEvent
+        - UnstakedEvent
+      abis:
+        - name: BadgerGeyser
+          file: ./abis/BadgerGeyser.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: Staked(indexed address,uint256,uint256,indexed uint256,indexed uint256,bytes)
+          handler: handleStaked
+        - event: Unstaked(indexed address,uint256,uint256,indexed uint256,indexed uint256,bytes)
+          handler: handleUnstaked
+      file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: nativeSushiWbtcEthLpGeyser
+    network: mainnet
+    source:
+      address: '0x612f681BCd12A0b284518D42D2DBcC73B146eb65'
+      abi: BadgerGeyser
+      startBlock: 11539829
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
