--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -476,6 +476,27 @@ dataSources:
         - event: Unstaked(indexed address,uint256,uint256,indexed uint256,indexed uint256,bytes)
           handler: handleUnstaked
       file: ./src/mapping.ts
+  # ===== Farm Harvest =====
+  - kind: ethereum/contract
+    name: harvestFarm
+    network: mainnet
+    source:
+      address: '0x17c118416BD713e00037125D85E58abaC60c4A4E'
+      abi: StrategyHarvestMetaFarm
+      startBlock: 11376266
+    mapping: 
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - HarvestFarmEvent
+      abis:
+        - name: StrategyHarvestMetaFarm
+          file: ./abis/StrategyHarvestMetaFarm.json
+      eventHandlers:
+        - event: FarmHarvest(uint256,uint256,uint256,uint256,uint256,uint256) 
+          handler: handleFarmHarvest
+      file: ./src/mapping.ts
 # ===== Strategy Template =====
 templates:
   - name: Strategy
