--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -489,7 +489,7 @@ dataSources:
       apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
-        - HarvestFarmEvent
+        - FarmHarvestEvent
       abis:
         - name: StrategyHarvestMetaFarm
           file: ./abis/StrategyHarvestMetaFarm.json
