--- a/tf-aws-standalone/templates/userdata.sh.template
+++ b/tf-aws-standalone/templates/userdata.sh.template
@@ -4,10 +4,10 @@
 yum install -y jq # JSON parser for sh/bash
 yum install -y git
 yum install -y docker
-/bin/systemctl start docker.service
+service docker start
 ### Set ethnode_url to the url of a eth node that will be used based on an ssm parameter
-graphnode_url_ssm_arn=${graphnode_url_ssm_arn}
-export ETHNODE_URL=`aws ssm get-parameters --name $graphnode_url_ssm_arn | jq '.Parameters | .[] | .Value'`
+export AWS_DEFAULT_REGION=${region} ## REMOVE to detemplatize
+export ETHNODE_URL=`aws ssm get-parameters --name ${graphnode_url_ssm_arn} | jq -r '.Parameters | .[] | .Value'` ## Change to a string with a url to templatize
 ## Install Node and yarn
 curl --silent --location https://rpm.nodesource.com/setup_14.x | bash -
 yum -y install nodejs
@@ -23,15 +23,16 @@ cd /graph-node
 git clone https://github.com/graphprotocol/graph-node
 cd graph-node/docker
 mv docker-compose.yml docker-compose.yml.orig
-sed "s|mainnet:http://host.docker.internal:8545|$ETHNODE_URL|g" docker-compose.yml.orig > docker-compose.yml
-docker-compose up -d
-cd /
+sed "s|mainnet:http://host.docker.internal:8545|mainnet:$ETHNODE_URL|g" docker-compose.yml.orig > docker-compose.yml
+sleep 10 #this seems neccessary on a t2.micro
+/usr/local/bin/docker-compose up -d
 ### This system should now be running as a graph node
 ### Now we need to install some graphs
 
 ### Badger subgraph
+cd /graph-node
 mkdir -p subgraphs/badger-subgraph
-cd subgraphs/badger-subgraph
+cd subgraphs
 git clone https://github.com/Badger-Finance/badger-subgraph
 cd badger-subgraph
 echo "export GRAPH_PATH=\"Badger-Finance/badger-subgraph\"" > .envrc
