--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -267,6 +267,105 @@ dataSources:
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleShareTransfer
       file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: nativeUniDiggWbtcLpSett
+    network: mainnet
+    source:
+      address: '0xC17078FDd324CC473F8175Dc5290fae5f2E84714'
+      abi: V1Contract
+      startBlock: 11537600
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - Vault
+        - Deposit
+        - Withdraw
+        - Harvest
+        - Transfer
+        - AccountVaultBalance
+        - Account
+        - Token
+      abis:
+        - name: V1Contract
+          file: ./abis/V1Contract.json
+        - name: Controller
+          file: ./abis/Controller.json
+        - name: Strategy
+          file: ./abis/Strategy.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleShareTransfer
+      file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: nativeSushiDiggWbtcLpSett
+    network: mainnet
+    source:
+      address: '0x88128580ACdD9c04Ce47AFcE196875747bF2A9f6'
+      abi: V1Contract
+      startBlock: 11537600
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - Vault
+        - Deposit
+        - Withdraw
+        - Harvest
+        - Transfer
+        - AccountVaultBalance
+        - Account
+        - Token
+      abis:
+        - name: V1Contract
+          file: ./abis/V1Contract.json
+        - name: Controller
+          file: ./abis/Controller.json
+        - name: Strategy
+          file: ./abis/Strategy.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleShareTransfer
+      file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: nativeDiggSett
+    network: mainnet
+    source:
+      address: '0x7e7E112A68d8D2E221E11047a72fFC1065c38e1a'
+      abi: V1Contract
+      startBlock: 11537600
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - Vault
+        - Deposit
+        - Withdraw
+        - Harvest
+        - Transfer
+        - AccountVaultBalance
+        - Account
+        - Token
+      abis:
+        - name: V1Contract
+          file: ./abis/V1Contract.json
+        - name: Controller
+          file: ./abis/Controller.json
+        - name: Strategy
+          file: ./abis/Strategy.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleShareTransfer
+      file: ./src/mapping.ts
   # ===== Geysers =====
   - kind: ethereum/contract
     name: nativeBadgerGeyser
@@ -476,6 +575,58 @@ dataSources:
         - event: Unstaked(indexed address,uint256,uint256,indexed uint256,indexed uint256,bytes)
           handler: handleUnstaked
       file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: nativeUniDiggWbtcLpGeyser
+    network: mainnet
+    source:
+      address: '0x0194B5fe9aB7e0C43a08aCbb771516fc057402e7'
+      abi: BadgerGeyser
+      startBlock: 11707436
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - Geyser
+        - StakedEvent
+        - UnstakedEvent
+      abis:
+        - name: BadgerGeyser
+          file: ./abis/BadgerGeyser.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: Staked(indexed address,uint256,uint256,indexed uint256,indexed uint256,bytes)
+          handler: handleStaked
+        - event: Unstaked(indexed address,uint256,uint256,indexed uint256,indexed uint256,bytes)
+          handler: handleUnstaked
+      file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: nativeSushiDiggWbtcLpGeyser
+    network: mainnet
+    source:
+      address: '0x7f6fe274e172ac7d096a7b214c78584d99ca988b'
+      abi: BadgerGeyser
+      startBlock: 11707436
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - Geyser
+        - StakedEvent
+        - UnstakedEvent
+      abis:
+        - name: BadgerGeyser
+          file: ./abis/BadgerGeyser.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: Staked(indexed address,uint256,uint256,indexed uint256,indexed uint256,bytes)
+          handler: handleStaked
+        - event: Unstaked(indexed address,uint256,uint256,indexed uint256,indexed uint256,bytes)
+          handler: handleUnstaked
+      file: ./src/mapping.ts
   # ===== Farm Harvest =====
   - kind: ethereum/contract
     name: harvestFarm
@@ -497,6 +648,8 @@ dataSources:
         - event: FarmHarvest(uint256,uint256,uint256,uint256,uint256,uint256) 
           handler: handleFarmHarvest
       file: ./src/mapping.ts
+    
+    
 # ===== Strategy Template =====
 templates:
   - name: Strategy
