--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -648,7 +648,47 @@ dataSources:
         - event: FarmHarvest(uint256,uint256,uint256,uint256,uint256,uint256) 
           handler: handleFarmHarvest
       file: ./src/mapping.ts
-    
+
+  - kind: ethereum/contract
+    name: harvestSushiWbtcBadger
+    network: mainnet
+    source:
+      address: '0x3a494D79AA78118795daad8AeFF5825C6c8dF7F1'
+      abi: StrategySushiBadgerWbtc
+      startBlock: 11539000
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities: 
+        - SushiHarvestEvent
+      abis:
+        - name: StrategySushiBadgerWbtc
+          file: ./abis/StrategySushiBadgerWbtc.json
+      eventHandlers:
+        - event: HarvestState(uint256,uint256,uint256,uint256,uint256,uint256,uint256)
+          handler: handleSushiHarvest
+      file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: harvestSushiWbtcEth
+    network: mainnet
+    source:
+      address: '0x7a56d65254705b4def63c68488c0182968c452ce'
+      abi: StrategySushiLpOptimizer
+      startBlock: 11537600 
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities: 
+        - SushiHarvestEvent
+      abis:
+        - name: StrategySushiLpOptimizer
+          file: ./abis/StrategySushiLpOptimizer.json
+      eventHandlers:
+        - event: HarvestState(uint256,uint256,uint256,uint256,uint256,uint256,uint256)
+          handler: handleSushiHarvest
+      file: ./src/mapping.ts
     
 # ===== Strategy Template =====
 templates:
