feat: added digg and badger balance to subgraph

--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -2,7 +2,51 @@ specVersion: 0.0.2
 schema:
   file: ./schema.graphql
 dataSources:
+
+  # ===== Tokens =====
+  - kind: ethereum/contract
+    name: Badger
+    network: mainnet
+    source:
+      address: '0x3472A5A71965499acd81997a54BBA8D852C6E53d'
+      abi: MiniMeToken
+      startBlock: 11348423
+    mapping:
+      kind: ethereum/events
+      language: wasm/assemblyscript
+      apiVersion: 0.0.4
+      entities:
+        - BadgerBalance
+      abis:
+        - name: MiniMeToken
+          file: ./abis/MiniMeToken.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleBadgerTransfer
+      file: ./src/mapping.ts
+
+  - kind: ethereum/contract
+    name: Digg
+    network: mainnet
+    source:
+      address: '0xFaBec03B04279c6E73F27AaF25866ACc844448Ae'
+      abi: UFragments
+      startBlock: 11668293 
+    mapping:
+      kind: ethereum/events
+      language: wasm/assemblyscript
+      apiVersion: 0.0.4
+      entities:
+        - DiggBalance
+      abis:
+        - name: UFragments
+          file: ./abis/UFragments.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleDiggTransfer
+      file: ./src/mapping.ts
   # ===== Setts =====
+
   - kind: ethereum/contract
     name: nativeBadgerSett
     network: mainnet
@@ -693,7 +737,7 @@ dataSources:
     name: harvestSushiWbtcDigg
     network: mainnet
     source:
-      address: '0xaa8dddfe7DFA3C3269f1910d89E4413dD006D08a'
+      address: '0x16626fd20b8e1541fdb85d9e63def368b374fa75'
       abi: StrategySushiDiggWbtcLpOptimizer
       startBlock: 11676338 
     mapping:
