--- a/subgraphs/tree-rewards/subgraph.yaml
+++ b/subgraphs/tree-rewards/subgraph.yaml
@@ -228,6 +228,31 @@ dataSources:
       file: ./src/mapping.ts
 
   - kind: ethereum/contract
+    name: harvestTriCrypto2
+    network: mainnet
+    source:
+      address: '0x2eB6479c2f033360C0F4575A88e3b8909Cbc6a03'
+      abi: StrategyConvexStakingOptimizer
+      startBlock: 12965943
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - TreeDistribution
+        - Token
+      abis:
+        - name: StrategyConvexStakingOptimizer
+          file: ./abis/StrategyConvexStakingOptimizer.json
+        - name: ERC20
+          file: ./abis/ERC20.json
+      eventHandlers:
+        - event: TreeDistribution(indexed address,uint256,indexed uint256,uint256)
+          handler: handleTreeDistribution
+      file: ./src/mapping.ts
+  
+
+  - kind: ethereum/contract
     name: harvestRenCrv
     network: mainnet
     source:
