--- a/subgraphs/tokens-polygon/subgraph.yaml
+++ b/subgraphs/tokens-polygon/subgraph.yaml
@@ -7,7 +7,7 @@ dataSources:
     name: Badger
     network: matic
     source:
-      address: "0x1FcbE5937B0cc2adf69772D228fA4205aCF4D9b2"
+      address: '0x1FcbE5937B0cc2adf69772D228fA4205aCF4D9b2'
       abi: UChildERC20
       startBlock: 11665741
     mapping:
@@ -29,7 +29,7 @@ dataSources:
     name: bBadger
     network: matic
     source:
-      address: "0x2628D301b161DB70E3dBbAc88d9D900cA426fF02"
+      address: '0x2628D301b161DB70E3dBbAc88d9D900cA426fF02'
       abi: UChildERC20
       startBlock: 11665791
     mapping:
@@ -46,12 +46,12 @@ dataSources:
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handlePolygonTransfer
       file: ./src/mapping.ts
-  
+
   - kind: ethereum/contract
     name: bDigg
     network: matic
     source:
-      address: "0xFDde616084427f0A231D0664a985E1F820E34693"
+      address: '0xFDde616084427f0A231D0664a985E1F820E34693'
       abi: UChildERC20
       startBlock: 11665872
     mapping:
@@ -68,4 +68,3 @@ dataSources:
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handlePolygonTransfer
       file: ./src/mapping.ts
-
