--- a/subgraphs/tokens-arbitrum/subgraph.yaml
+++ b/subgraphs/tokens-arbitrum/subgraph.yaml
@@ -5,11 +5,11 @@ dataSources:
   # ===== Tokens =====
   - kind: ethereum/contract
     name: Badger
-    network: arbitrum
+    network: arbitrum-one
     source:
-      address: "0x1FcbE5937B0cc2adf69772D228fA4205aCF4D9b2"
+      address: "0xBfa641051Ba0a0Ad1b0AcF549a89536A0D76472E"
       abi: UChildERC20
-      startBlock: 11665741
+      startBlock: 226071
     mapping:
       kind: ethereum/events
       language: wasm/assemblyscript
@@ -24,48 +24,3 @@ dataSources:
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handlePolygonTransfer
       file: ./src/mapping.ts
-
-  - kind: ethereum/contract
-    name: bBadger
-    network: arbitrum
-    source:
-      address: "0x2628D301b161DB70E3dBbAc88d9D900cA426fF02"
-      abi: UChildERC20
-      startBlock: 11665791
-    mapping:
-      kind: ethereum/events
-      language: wasm/assemblyscript
-      apiVersion: 0.0.4
-      entities:
-        - TokenBalance
-        - Token
-      abis:
-        - name: UChildERC20
-          file: ./abis/UChildERC20.json
-      eventHandlers:
-        - event: Transfer(indexed address,indexed address,uint256)
-          handler: handlePolygonTransfer
-      file: ./src/mapping.ts
-  
-  - kind: ethereum/contract
-    name: bDigg
-    network: arbitrum
-    source:
-      address: "0xFDde616084427f0A231D0664a985E1F820E34693"
-      abi: UChildERC20
-      startBlock: 11665872
-    mapping:
-      kind: ethereum/events
-      language: wasm/assemblyscript
-      apiVersion: 0.0.4
-      entities:
-        - TokenBalance
-        - Token
-      abis:
-        - name: UChildERC20
-          file: ./abis/UChildERC20.json
-      eventHandlers:
-        - event: Transfer(indexed address,indexed address,uint256)
-          handler: handlePolygonTransfer
-      file: ./src/mapping.ts
-
