chore: add arbitrum graph, update eth registry

--- a/subgraphs/badger-dao/package.json
+++ b/subgraphs/badger-dao/package.json
@@ -6,12 +6,14 @@
     "prepare:bsc": "mustache config/bsc.json subgraph.template.yaml > subgraph.yaml",
     "prepare:matic": "mustache config/matic.json subgraph.template.yaml > subgraph.yaml",
     "prepare:xdai": "mustache config/xdai.json subgraph.template.yaml > subgraph.yaml",
+    "prepare:arbitrum": "mustache config/arbitrum.json subgraph.template.yaml > subgraph.yaml",
     "codegen": "graph codegen subgraph.yaml",
     "build": "graph build subgraph.yaml",
     "deploy:mainnet": "graph deploy --studio badger-dao",
     "deploy:matic": "graph deploy --node https://api.thegraph.com/deploy/ axejintao/badger-dao-polygon",
     "deploy:xdai": "graph deploy --node https://api.thegraph.com/deploy/ axejintao/badger-dao-xdai",
     "deploy:bsc": "graph deploy --node https://api.thegraph.com/deploy/ axejintao/badger-dao-bsc",
+    "deploy:arbitrum": "graph deploy --node https://api.thegraph.com/deploy/ axejintao/badger-dao-arbitrum",
     "deploy:mainnet-staging": "graph deploy --node https://api.thegraph.com/deploy/ axejintao/badger-dao",
     "create-local": "graph create --node http://localhost:8020/ axejintao/badger-dao",
     "remove-local": "graph remove --node http://localhost:8020/ axejintao/badger-dao",
